namespaces/live.cloud-platform.service.justice.gov.uk/laa-cwa-users-api-test/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-cwa-users-api-test"
  labels:
    cloud-platform.justice.gov.uk/namespace: "laa-cwa-users-api-test"
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "test"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-pcuam"
    cloud-platform.justice.gov.uk/application: "cwa-users-api"
    cloud-platform.justice.gov.uk/owner: "CWA Application: laa-pcuam-support@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cwa-users-api"
    cloud-platform.justice.gov.uk/team-name: "laa-pcuam"
    cloud-platform.justice.gov.uk/review-after: ""
